<resources>
    <string name="app_name">Laundry Online</string>
    <string name="server_client_id">483875639999-o2eqrodsvoso87cekjj2jo8e5evok2rb.apps.googleusercontent.com</string>
    <string name="facebook_app_id">843546309885289</string>
    <string name="fb_login_protocol_scheme">fb843546309885289</string>

    <string name="my">My</string>
    <string name="laundry">Laundry</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Order History</string>
    <string name="title_information">User</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="ward">Ward</string>
    <string name="detail_address">Detail Address</string>
    <string name="back_to_login">Back to login</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="connect_with">OR CONNECT WITH:</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_or_signup">Login and Sign Up</string>
    <string name="hint_enter_name">Enter full name *</string>
    <string name="hint_email_address">Enter email address *</string>
    <string name="hint_phone_number">Enter phone number *</string>
    <string name="hint_password">Enter password *</string>
    <string name="hint_confirm_password">Enter confirm password *</string>
    <string name="hint_city">City *</string>
    <string name="hint_address">Enter address *</string>
    <string name="hint_district">District *</string>
    <string name="hint_ward">Ward *</string>
    <string name="hint_username">Enter username *</string>
    <string name="name_wrong">Please enter full name.</string>
    <string name="wash_iron"><![CDATA[Wash & Iron]]></string>
    <string name="new_order">New order</string>
    <string name="order_history">Order history</string>
    <string name="order_history_uppercase">Order History</string>
    <string name="accept">Accept</string>
    <string name="picked_date_time"><![CDATA[Pickup Date & Time]]></string>
    <string name="pickup_address">Pickup Address</string>
    <string name="delivery_date_time"><![CDATA[Delivery Date & Time]]></string>
    <string name="delivery_address">Delivery Address</string>
    <string name="price">Price: </string>
    <string name="phone_number">Phone number shipping person: </string>
    <string name="delivering">Delivering</string>
    <string name="call">Call</string>
    <string name="done">Done</string>
    <string name="order_are_shipping">Order are shipping</string>
    <string name="online">Online</string>
    <string name="service_list_title">Service List</string>
    <string name="you_dont_have_order_yet">You don\'t have \n order yet</string>
    <string name="go_to_home_screen">Go to Home screen</string>
    <string name="change_infomation">Change infomation</string>
    <string name="history">History</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="order_detail">Order details</string>
    <string name="parcel_picked_up_and_on_the_way"><![CDATA[Parcel Picked Up & On The Way]]></string>
    <string name="order_delivered">Order Delivered</string>
    <string name="sub_total">Sub total: </string>
    <string name="delivery">Delivery: </string>
    <string name="book">Book</string>
    <string name="shipping_address">Shipping address</string>
    <string name="order_confirm">Order confirm</string>
    <string name="shipping_fee">Shipping fee:</string>
    <string name="vat">VAT(10%)</string>
    <string name="order_success">Order Success</string>
    <string name="select_delivery_date">Select Delivery Date</string>
    <string name="total_price">Total Price:</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="momo_wallet">Momo Wallet</string>
    <string name="other_payment_menthods">Other payment methods</string>
    <string name="place_an_order">Place an order</string>
    <string name="x">x</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="please_login_or_register">Please login or register.</string>
    <string name="add_address">Add Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="please_select_shipping_address">Please select shipping address.</string>
    <string name="shipping_methods">Shipping methods</string>
    <string name="name_and_phone_format">%s - %s</string>
    <string name="address_format">%s, %s, %s, %s</string>
    <string name="arriving_in">Arriving in %s mins.</string>
    <string name="license_plates">License plates: </string>
    <string name="range_of_vehicle">Range of vehicle: </string>
    <string name="payment_method">Payment method: </string>
    <string name="congratulation">Congratulation!</string>
    <string name="well_done">Well done, Lets check status!</string>
    <string name="cancel_order">Cancel order</string>
    <string name="cancel_order_successful">Cancel order successful!</string>
    <string name="cancel_order_fail">Cancel order fail!</string>
    <string name="order_fail">Order Failed!</string>
    <string name="order_fail_text_content">Something went wrong.\n Would like to try again?</string>
    <string name="order_status">Order Status : </string>
    <string name="date_create">Date Create :</string>
    <string name="order_receivered">Order received</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="please_select_service">Please select service!!!</string>
    <string name="phone_number_customer">Phone Number: </string>
    <string name="parcel_deliver_order">Deliver order</string>
    <string name="order_list_incomplete">Order Incomplete List</string>
    <string name="wrong_distance"><![CDATA[Please select address have distance <= 20km]]></string>
    <string name="name_receiver">Name Receiver :</string>
    <string name="address_receiver">Address Receiver :</string>
    <string name="order_complete">Order completed</string>
    <string name="general">General</string>
    <string name="phone_number_dot">Phone Number :</string>
    <string name="freshchat_file_provider_authority">com.example.demoapp.providerr</string>
    <string name="id_fresh_chat">98ad0dbb-f4e5-4889-9026-cc9deeef8b15</string>
    <string name="key_fresh_chat">a1816856-a8ce-4739-84b2-ed46fe85c9f5</string>
    <string name="domain_fresh_chat">msdk.freshchat.com</string>
    <string name="shipper">Shipper</string>
    <string name="customer">Customer</string>
    <string name="cannot_get_account_infomation">Cannot get account infomation</string>
    <string name="account_infomation">ACCOUNT INFOMATION</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    >>>>>>>>> Temporary merge branch 2
</resources>
