<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_navigation"
    app:startDestination="@+id/navigation_customer_home">

    <fragment
        android:id="@+id/navigation_customer_home"
        android:name="com.laundry.app.view.fragment.customer.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_customer_order_list"
        android:name="com.laundry.app.view.fragment.customer.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_customer_user"
        android:name="com.laundry.app.view.fragment.customer.NotificationsFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_notifications" />
</navigation>