<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/order_are_shipping_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_home_order_item"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_12"
        android:paddingTop="@dimen/dp_12"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20">
            <TextView
                android:id="@+id/order_are_shipping_delivery_address_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/green_8cc63e"
                android:text="@string/delivery_address"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/order_are_shipping_delivery_address_content"
                android:layout_width="@dimen/dp_150"
                android:layout_height="wrap_content"
                android:layout_below="@+id/order_are_shipping_delivery_address_heading"
                android:textColor="@color/gray_807e7e"
                android:textSize="@dimen/sp_10"
                tools:text="15 Hiclory Lane, Silver Spring.\nDC, Washington, 20904" />
            <TextView
                android:id="@+id/order_are_shipping_phonenumber_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:layout_below="@+id/order_are_shipping_delivery_address_content"
                android:textColor="@color/green_8cc63e"
                android:text="@string/phone_number_customer"
                />
            <TextView
                android:id="@+id/order_are_shipping_phonenumber_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_10"
                android:layout_below="@+id/order_are_shipping_delivery_address_content"
                android:layout_toEndOf="@+id/order_are_shipping_phonenumber_heading"
                android:textColor="@color/gray_807e7e"
                tools:text="0984622362"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/order_are_shipping_phonenumber_content"
                android:layout_marginRight="@dimen/dp_16">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/status_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/status_content"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/delivering"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/blue_29aae3"
                    android:textSize="@dimen/sp_8" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_24">

            <Button
                android:id="@+id/home_staff_derivering_order_call_button"
                android:layout_width="@dimen/dp_128"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_16"
                android:gravity="center"
                android:background="@drawable/shaper_button_green"
                android:text="@string/call"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/home_staff_derivering_order_done_button"
                android:layout_width="@dimen/dp_128"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_20"
                android:gravity="center"
                android:textSize="@dimen/sp_15"
                android:background="@drawable/shaper_button_green"
                android:text="@string/done"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</layout>